# modulo_II

./: README.md  pyproject.toml  requirements.txt  todos.html
todos/data/: my_first_todo_list.csv
todos/src/: todos.py
todos/tests/: test_list.py
todos/tests/integration/: test_integration.py
todos/tests/unit/: test_add_task.py  test_create.py
