[tool.poetry]
name = "todos"
version = "0.1.0"
description = "Paquete para generar todo list"
authors = ["RoSaavedra <55178179+RoSaavedra@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
